QA: Fix z-index problem on channel collection overflow

--- a/apps/chat/web/styles/society-pro-chat.css
+++ b/apps/chat/web/styles/society-pro-chat.css
@@ -113,6 +113,7 @@ collection {
 
 /* Channels Overflow */
 .sopro-channels-overflow {
+  z-index: 200;
   position: absolute;
   left: 125px;
   bottom: -200px;
